--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@remotion/shapes": "4.0.375",
     "@tailwindcss/cli": "4.1.1",
     "@tailwindcss/vite": "4.1.1",
+     "@remotion/bundler": "^4.0.0",
+    "@remotion/renderer": "^4.0.0",
     "clsx": "2.1.1",
     "isbot": "4.1.0",
     "react": "19.0.0",
