`Updated package-lock.json and package.json with new dependencies and versions`

--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
   "dependencies": {
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "7.2.0",
+    "@remotion/bundler": "^4.0.0",
     "@remotion/cli": "4.0.375",
     "@remotion/google-fonts": "4.0.375",
     "@remotion/lambda": "4.0.375",
     "@remotion/paths": "4.0.375",
     "@remotion/player": "4.0.375",
+    "@remotion/renderer": "^4.0.0",
     "@remotion/shapes": "4.0.375",
     "@tailwindcss/cli": "4.1.1",
     "@tailwindcss/vite": "4.1.1",
-     "@remotion/bundler": "^4.0.0",
-    "@remotion/renderer": "^4.0.0",
     "clsx": "2.1.1",
     "isbot": "4.1.0",
     "react": "19.0.0",
@@ -41,6 +41,7 @@
     "dotenv": "16.0.3",
     "eslint": "9.19.0",
     "prettier": "3.6.0",
+    "sass": "^1.94.2",
     "tsx": "4.19.3",
     "typescript": "5.8.2"
   },
